# Quiz2_Bases_2

./: QuizQuerysDarioEspinozaJersonPrendasMarbelBrenesAnthonyGuevara.ipynb  README.md  docker-compose.yml  pyproject.toml  queries.ipynb
